Updates for basement.

--- a/appdaemon/appdaemon.yaml
+++ b/appdaemon/appdaemon.yaml
@@ -10,10 +10,10 @@ appdaemon:
     HASS:
       type: hass
       ha_url: http://hassio/homeassistant
-      ha_key: !secret dashboard_ha_key
+      ha_key: 
 hadashboard:
   dash_url: http://127.0.0.1:5050
   dash_dir: /config/appdaemon/dashboards
-  dash_password: !secret dashboard_password
-  dash_ssl_certificate: !secret http_ssl_crt
-  dash_ssl_key: !secret http_ssl_key
+  dash_password: 
+  dash_ssl_certificate: /ssl/fullchain.pem
+  dash_ssl_key: /ssl/privkey.pem
