--- a/armoury/group/armoury_house_main_floor.yaml
+++ b/armoury/group/armoury_house_main_floor.yaml
@@ -2,7 +2,7 @@ house_main_floor_front_entry:
   name: Front Entryway
   control: hidden
   entities:
-    - binary_sensor.aeotec_zw112_door_window_sensor_6_sensor_3
+    - sensor.front_door_sensor_human_readable
     - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
     - light.homeseer_hswd100_wall_dimmer_level_2
 house_main_floor_living_room:
@@ -53,7 +53,7 @@ house_main_floor_side_entry:
   name: Side Entryway
   control: hidden
   entities:
-    - binary_sensor.aeotec_zw112_door_window_sensor_6_sensor
+    - sensor.side_door_sensor_human_readable
     - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked_2
 house_main_floor_laundry_room:
   name: Laundry Room
