--- a/armoury/google_assistant_entity_config.yaml
+++ b/armoury/google_assistant_entity_config.yaml
@@ -30,6 +30,18 @@ light.kitchen_cabinet:
   name: Kitchen Cabinet
   room: Kitchen
 #  type: 'action.devices.types.LIGHT'
+light.dining_room_1:
+  name: Dining Room 1
+  room: Dining Room
+#  type: 'action.devices.types.LIGHT'
+light.dining_room_2:
+  name: Dining Room 2
+  room: Dining Room
+#  type: 'action.devices.types.LIGHT'
+light.dining_room_3:
+  name: Dining Room 3
+  room: Dining Room
+#  type: 'action.devices.types.LIGHT'
 switch.Aeotec_ZW096_Smart_Switch_6_Switch:
   name: Fireplace
   room: Master Bedroom
