--- a/armoury/google_assistant_list.yaml
+++ b/armoury/google_assistant_list.yaml
@@ -2,6 +2,9 @@
 - light.chair_lamp
 - light.bedside_left
 - light.bedside_right
+- light.dining_room_1
+- light.dining_room_2
+- light.dining_room_3
 - light.homeseer_hswd100_wall_dimmer_level_3
 - light.homeseer_hswd100_wall_dimmer_level_2
 - light.homeseer_hswd100_wall_dimmer_level
