--- a/appdaemon/appdaemon.yaml
+++ b/appdaemon/appdaemon.yaml
@@ -10,10 +10,10 @@ appdaemon:
     HASS:
       type: hass
       ha_url: http://hassio/homeassistant
-      ha_key: 
+      token: 
 hadashboard:
-  dash_url: http://127.0.0.1:5050
+  dash_url: https://127.0.0.1:5050
   dash_dir: /config/appdaemon/dashboards
   dash_password: 
-  dash_ssl_certificate: /ssl/fullchain.pem
-  dash_ssl_key: /ssl/privkey.pem
+  dash_ssl_certificate: 
+  dash_ssl_key: 
