--- a/configuration.yaml
+++ b/configuration.yaml
@@ -113,8 +113,7 @@ octoprint:
     number_of_tools: !secret 3d_printer_controller_tools
 
 # Enable Trackers
-device_tracker:
-  - platform: owntracks
+owntracks:
 
 # Enable OpenWeatherMap
 weather:
