Fixeds for HA upgrades. Converted manual climate control in Matser bedroom to generic climate componenent.

--- a/armoury/customize/armoury_house_main_floor_hallway_nest.yaml
+++ b/armoury/customize/armoury_house_main_floor_hallway_nest.yaml
@@ -1,11 +1,5 @@
-sensor.ELINA_Thermostat_temperature:
-  friendly_name: Nest Temperature
+climate.elina:
+  friendly_name: Home HVAC
 sensor.ELINA_Thermostat_humidity:
-  friendly_name: Nest Humidity
+  friendly_name: Humidity
   icon: mdi:water-percent
-sensor.ELINA_Thermostat_operation_mode:
-  friendly_name: Nest Mode
-  icon: mdi:settings-box
-sensor.ELINA_Thermostat_hvac_state:
-  friendly_name: Nest HVAC State
-  icon: mdi:settings-box
