--- a/armoury/sensor/armoury_house_basement_office_synologynas.yaml
+++ b/armoury/sensor/armoury_house_basement_office_synologynas.yaml
@@ -8,6 +8,7 @@ monitored_conditions:
       - cpu_total_load
       - memory_real_usage
       - network_up
+      - network_down
       - disk_status
       - disk_temp
       - volume_status
