--- a/armoury/group/armoury_outside.yaml
+++ b/armoury/group/armoury_outside.yaml
@@ -12,7 +12,7 @@ outside_back_yard:
   name: Back Yard
   control: hidden
   entities: 
-    - switch.gazebo_light
+    - light.gazebo_light
     - sensor.hottub_temperature
     - binary_sensor.opensprinkler_station_03
     - binary_sensor.opensprinkler_station_04
