--- a/armoury/google_assistant_list.yaml
+++ b/armoury/google_assistant_list.yaml
@@ -5,6 +5,7 @@
 - light.dining_room_1
 - light.dining_room_2
 - light.dining_room_3
+- light.gazebo_light
 - light.homeseer_hswd100_wall_dimmer_level_3
 - light.homeseer_hswd100_wall_dimmer_level_2
 - light.homeseer_hswd100_wall_dimmer_level
