Upgraded HADASHBOARD and modified alert for hot tub.

--- a/armoury/group/armoury.yaml
+++ b/armoury/group/armoury.yaml
@@ -23,6 +23,7 @@ house_security:
   name: House (Security)
   entities:
     - alarm_control_panel.Armoury_Alarm_System
+    - camera.ishtar
     - group.security
 garage:
   view: yes
