--- a/appdaemon/appdaemon.yaml
+++ b/appdaemon/appdaemon.yaml
@@ -1,19 +1,19 @@
 secrets: /config/secrets.yaml
-log:
-  logfile: STDOUT
-  errorfile: STDERR
 appdaemon:
-  threads: 10
-  app_dir: /config/appdaemon/apps
+  latitude: !secret home_latitude
+  longitude: !secret home_longitude
+  elevation: !secret home_elevation
+  time_zone: !secret home_timezone
   disable_apps: 1
   plugins:
     HASS:
       type: hass
-      ha_url: http://hassio/homeassistant
-      token: 
-hadashboard:
-  dash_url: https://127.0.0.1:5050
-  dash_dir: /config/appdaemon/dashboards
-  dash_password: 
+http:
+  url: https://127.0.0.1:5050
+  password: !secret dashboard_password
   dash_ssl_certificate: /ssl/fullchain.pem
   dash_ssl_key: /ssl/privkey.pem
+hadashboard:
+  dashboard_dir: /config/appdaemon/dashboards
+admin:
+api:
