--- a/armoury/group/armoury_house_main_floor.yaml
+++ b/armoury/group/armoury_house_main_floor.yaml
@@ -1,25 +1,21 @@
 house_main_floor_front_entry:
   name: Front Entryway
-  control: hidden
   entities:
     - sensor.front_door_sensor_human_readable
     - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
     - light.homeseer_hswd100_wall_dimmer_level_2
 house_main_floor_living_room:
   name: Living Room
-  control: hidden
   entities:
     - light.aeotec_zw099_smart_dimmer_6_level
     - light.Chair_Lamp
 house_main_floor_hallway:
   name: Hallway
-  control: hidden
   entities: 
     - climate.elina
     - sensor.ELINA_Thermostat_humidity
 house_main_floor_bedroom_01:
   name: Master Bedroom
-  control: hidden
   entities:
     - climate.master_bedroom_heat
     - switch.Aeotec_ZW096_Smart_Switch_6_Switch
@@ -27,33 +23,28 @@ house_main_floor_bedroom_01:
     - light.Bedside_Right
 house_main_floor_bedroom_02:
   name: Upstairs Office
-  control: hidden
   entities:
+    - light.asuna
 house_main_floor_bathroom:
   name: Bathroom
-  control: hidden
   entities:
     - media_player.Armoury_Bathroom
 house_main_floor_dining:
   name: Dining Room
-  control: hidden
   entities:
     - media_player.Armoury_Dining_Room
     - light.Dining_Room_Lights
     - light.hibiki
 house_main_floor_kitchen:
   name: Kitchen
-  control: hidden
   entities:
     - light.Kitchen_Cabinet
     - media_player.Armoury_Kitchen
 house_main_floor_side_entry:
   name: Side Entryway
-  control: hidden
   entities:
     - sensor.side_door_sensor_human_readable
     - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked_2
 house_main_floor_laundry_room:
   name: Laundry Room
-  control: hidden
   entities:
